--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "real-world-vue",
+  "name": "vue-data-grid-assignment",
   "version": "0.0.0",
   "private": true,
   "type": "module",
